--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@cgcs2000/whoots-js",
+  "name": "@shitao1988/swsk-whoots-js",
   "description": "Request tiles from WMS servers that support CGCS2000 (EPSG:4490)",
   "version": "3.1.0",
   "main": "index.js",
   "module": "index.mjs",
   "license": "ISC",
   "author": "Bryan Housel <bryan@mapbox.com>",
-  "repository": "cgcs2000/whoots-js",
+  "repository": "shitao1988/swsk-whoots-js",
   "keywords": [
     "WMS",
     "tiles",
